# stargazers

./: LICENSE  README.md  build.sh  cs107stargazers_Samia_Elena_Devin_Ali_Innocent.ipynb  generate_docs.sh  install.sh  pyproject.toml  requirements.txt
.github/workflows/: .tests.yml  coverage.yml  coverage_aug.yml  coverage_ml.yml  tests.yml  tests_aug.yml  tests_ml.yml
API_draft/: README.md  milestone5.md
docs/: milestone4.md  placeholder.txt
docs/html/: .buildinfo  cs107stargazers.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_sources/: cs107stargazers.rst.txt  index.rst.txt
docs/html/_sources/autoapi/: index.rst.txt
docs/html/_sources/autoapi/cs107stargazers/: index.rst.txt
docs/html/_static/: documentation_options.js
docs/html/autoapi/: index.html
docs/html/autoapi/cs107stargazers/: index.html
docs/html/autoapi/cs107stargazers/augment/: index.html
docs/html/autoapi/cs107stargazers/metadata_extraction/: index.html
docs/html/autoapi/cs107stargazers/ml_stargazer/: index.html
docs/source/: conf.py  index.rst
src/: augment.py  ml_stargazer.py
src/cs107stargazers/: augment.py  metadata_extraction.py  ml_stargazer.py  preprocessing.py  query.py  spectrumalignment.py  visualization.py
tests/: .coverage  test_augment.py  test_integration.py  test_metadata_extractor.py  test_ml_stargazer.py  test_preprocessing.py  test_query.py  test_spectrumalignment.py  test_visualization.py
tutorial/: cs107stargazers_Samia_Elena_Devin_Ali_Innocent.ipynb
(+11 files in other folders)
