[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
authors = [
  {name = "Elena Jauregui", email = "ejauregui@hsph.harvard.edu"},
  {name = "Samia Afrose", email = "samiaafrose@college.harvard.edu"},
  {name = "Devin Guevara", email = "devinguevara@college.harvard.edu"},
  {name = "Ali Khan", email = "alikhan@college.harvard.edu"},
  {name = "Innocent Munai", email = "innocentmunai@college.harvard.edu"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "A package for Astronomical research."
name = "cs107stargazers"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.2"

[project.urls]
"Bug Tracker" = "https://code.harvard.edu/CS107/team27_2023/issues"
"Homepage" = "https://code.harvard.edu/CS107/team27_2023"
